# rag-research

./: .gitignore  README.md  pyproject.toml
documents/: DAGs- Existing Integration Points and Infrastructure.md  Extraction Strategies and Capabilities from the.md  Navigating Existing vs New Infrastructure.md  Organization Information.md  Prior effort related to this project to consider.md  Security Bulletin Data and Utils Repo Info.md  security-advisories-collectors-refactor.md
prompts/: prompt.md
src/: main.py
